feat: implement RP-015 application products
